SERVER-48301 find command should reject $_internalReadAtClusterTime values less than afterClusterTime